修改load动画为小汽车

--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -837,6 +837,7 @@ css_prefix: true
 # 插入代码到头部 </head> 之前 和 底部 </body> 之前
 inject:
   head:
+    - <link rel="stylesheet" href="/zhheo/zhheocar.css">
     # - <link rel="stylesheet" href="/css/mouse.css">
     # - <link rel="stylesheet" href="/zan/zan.css">
     # - <link rel="stylesheet" href="/xxx.css">
