--- a/themes/butterfly/_config.yml
+++ b/themes/butterfly/_config.yml
@@ -87,10 +87,10 @@ avatar:
 disable_top_img: false
 
 # The banner image of home page
-index_img: images/FalklandKings2.jpg
+index_img: 
 
 # If the banner of page not setting, it will show the top_img
-default_top_img: images/FalklandKings2.jpg
+default_top_img: 
 
 # The banner image of archive page
 archive_img:
